fixed a responsive layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@ body{
   justify-content: center;
 }
 
+
+
 /*Nav bar*/
 
 .nav-bar, .nav-logo {
@@ -626,7 +628,7 @@ Hangman Game Page
   padding: 12px 23px;
 }
 
-@media (max-width: 782px) {
+@media (max-width: 35rem) {
   .hangman-container {
       flex-direction: column;
       padding: 30px 15px;
@@ -685,7 +687,7 @@ Games Page
 
 /  /  /  /  / */
 
-.container {
+.container-game {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around; /* Adjust as needed */
@@ -740,7 +742,12 @@ Games Page
 }
 
 @media (max-width: 35rem) {
-  .container {
+  .container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .container-game {
     justify-content: center;
   }
 
